# youtube_live_api

./: .gitignore  README.md  docker-compose.yml
app/: .env.local  main.py  pyproject.toml
app/config/: app.py  logging.py
app/middlewares/: logging_middleware.py
app/routes/: __init__.py  creator_routes.py  live_routes.py  user_routes.py
app/schemas/: item_schema.py  user_schema.py
app/schemas/creator/: creator_schema.py
app/schemas/creator/requests/: item_request.py  items_request.py
app/schemas/creator/responses/: item_response.py  items_response.py
app/schemas/live/: live_schema.py
app/schemas/live/requests/: item_request.py  items_request.py
app/schemas/live/responses/: item_response.py  items_response.py
app/services/: item_service.py  user_service.py
app/services/creator/: creator_service.py
app/services/live/: live_service.py
app/utils/enums/: status.py
app/utils/filters/creator/: item_filter.py  items_filter.py
app/utils/filters/live/: item_filter.py  items_filter.py
docker/python/: Dockerfile
docs/: directory.md  setup.md
